fix z-index of chat input

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -407,7 +407,7 @@ input {
   padding: 20px;
   height: 100px; /* Full-height: remove this if you want "auto" height */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
+  z-index: 0; /* Stay on top */
   bottom: 0; /* Stay at the top */
   overflow-x: hidden; /* Disable horizontal scroll */
   // border-top: $black 3px solid;
